--- a/Hormigas.csproj
+++ b/Hormigas.csproj
@@ -64,11 +64,11 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="FlickrNet">
-      <HintPath>..\..\..\FlickrNet-3.13.0\FlickrNet.dll</HintPath>
+      <HintPath>.\FlickrNet.dll</HintPath>
     </Reference>
     <Reference Include="ImageListView, Version=11.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\ImageListView\bin\Release\ImageListView.dll</HintPath>
+      <HintPath>.\ImageListView.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
